--- a/SiSHome.html
+++ b/SiSHome.html
@@ -9,30 +9,31 @@
       <!-- about link -->
       <!-- custom link -->
     </header>
-     <div id=HomeTitle class = title>
+     <div id="HomeTitle" class="title">
        <h1> Stuff in Stuff </h1>
      </div>
-    <div id = StuffPicker class = activityBox>
-      <div id = FillPicker>
+    <div id ="StuffPicker" class="activityBox">
+      <div id="FillPicker">
         <h2> How many </h2>
-        <img alt = "Question Mark", src ="https://github.com/Stuart-Y/startup/blob/main/QuestionMark.png" >
+        <img alt="Question Mark", src="https://github.com/Stuart-Y/startup/blob/main/QuestionMark.png" >
         <select class=itemPicker></select>
       </div>
-      <div id = StuffedPicker>
+      <div id="StuffedPicker">
         <h2>can fit in</h2>
-        <img alt = "Question Mark", src ="https://github.com/Stuart-Y/startup/blob/main/QuestionMark.png" >
-        <select class=itemPicker></select>
+        <img alt="Question Mark", src="https://github.com/Stuart-Y/startup/blob/main/QuestionMark.png" >
+        <select class="itemPicker"></select>
       </div>
     </div>
-    <div id=answerbox class=factbox>
+    <div id="answerbox" class="factbox">
       <p>answer:__</p>
     </div>
-    <div id=fillSettings class=optionBox>
+    <div id="fillSettings" class="optionBox">
       <h3>Packing Type</h3>
-      <select id=packingType class=mathPicker></select>
+      <select id="packingType" class="mathPicker"></select>
     </div>
     <footer>
       <!-- copyright stuff -->
+      <!--dynamically share this footer across pages-->
     </footer>
   </body>
 </html>
