--- a/SiSUesr.html
+++ b/SiSUesr.html
@@ -9,6 +9,36 @@
           <!-- about link -->
           <!-- custom link -->
         </header>
+        <div id="UserTitle" class="title">
+            <h1>Username</h1>
+        </div>
+        <div id="favorite" class="activityBox">
+            <div id="FavoriteTitle" class="title">
+                <h3>Favorite Item</h3>
+            </div>
+            <image alt="Favorite Item Picture(will be done in js)" src="">                    
+        </div>
+        <div id="LatestFills" class="activityBox">
+            <div id="LatestTitle" class="title">
+                <h3>Latest Stuff in Stuff</h3>    
+            </div>
+            <!--Dynamic List of Recent Fill Queries-->
+        </div>
+        <div id="UserCustomItems" class="activityBox">
+            <div id="UserCustomTitle" class="title">
+                <h3>Custom Items</h3>
+            </div>
+            <!--Dynamic List of User Generated Items-->
+        </div>
+        <div id="JokeBox" class="activityBox">
+            <div id="JokeTitle" class="title">
+                <h3>Dad Jokes</h3>
+            </div>
+            <p>
+                I've Got a pretty good joke about butter but I don't want you spreading it around
+            </p>
+            <!--Random Dad Joke-->
+        </div>
         <footer>
 
         </footer>
