--- a/SiSWhy.html
+++ b/SiSWhy.html
@@ -9,6 +9,13 @@
           <!-- about link -->
           <!-- custom link -->
         </header>
+        <h1>WHY?</h1>
+        <p>
+            One word <em>Scale</em>, people aren't very good at it. Sure mountains are big but how many duptrucks would it 
+            take to move. How many quarks fit in a grain of sand. How many wombats fit in a standard broom closet.
+            These are important questions, especially to authors and certain species of journalists. It it my dream that thi somehow prompts 
+            an xkcd comic or two somehow. The math for these things can be finicky.s
+        </p>
         <footer>
 
         </footer>
