--- a/SISWarning.html
+++ b/SISWarning.html
@@ -9,12 +9,16 @@
           <!-- about link -->
           <!-- custom link -->
         </header>
+        <div id="WarningTitle" class="title">
         <h1>I Wish I Didn't Need This Page</h1>
-        <p>
-            I am aware of some corners of the internet and can imagine some less savory imagery 
-            generated that this websites premise might render. I choose not to host this on my site. Sorry for the 
-            inconvenience but certain items and combinations of items I have chosen to prohibit. 
-        </p>    
+        </div>
+        <div id="warningText" class="infotext">
+            <p>
+                I am aware of some corners of the internet and can imagine some less savory imagery 
+                generated that this websites premise might render. I choose not to host this on my site. Sorry for the 
+                inconvenience but certain items and combinations of items I have chosen to prohibit. 
+            </p>
+        </div>    
         <footer>
 
         </footer>
