html headers and footers for  deployment

--- a/SISBio.html
+++ b/SISBio.html
@@ -4,14 +4,26 @@
     </head>
     <body>
         <header>
-          <!-- Logo Home Button -->
-          <!-- why link -->
-          <!-- about link -->
-          <!-- custom link -->
+      <!-- Logo Home Button -->
+      <div id="HomeTitle" class="title">
+        <h1> Stuff in Stuff<sup>&reg;</sup></h1>
+      </div>
+      <nav>
+        <menu>
+          <li><a href="SiSHome.html">Home</a></li>
+          <li><a href="SiSCustom.html">Custom</a></li>
+          <li><a href="SISBio.html">About</a></li>
+          <li><a href="SISWhy"> why?</a></li>
+          <li><a href="SISLogin">login</a></li>
+        </menu>
+      </nav>
         </header>
             <div id="aboutTitle" class="title">
+                <h1>About</h1>
+            </div>
+            <p>At some point I may put useful information in here. For now this seems enough</p>
         <footer>
-
+            <a href="https://github.com/Stuart-Y/startup">GitHub</a>
         </footer>
     </body> 
 </html>
