--- a/SiSWhy.html
+++ b/SiSWhy.html
@@ -5,19 +5,29 @@
     <body>
         <header>
           <!-- Logo Home Button -->
-          <!-- why link -->
-          <!-- about link -->
-          <!-- custom link -->
+      <!-- Logo Home Button -->
+      <div id="HomeTitle" class="title">
+        <h1> Stuff in Stuff<sup>&reg;</sup></h1>
+      </div>
+      <nav>
+        <menu>
+          <li><a href="SiSHome.html">Home</a></li>
+          <li><a href="SiSCustom.html">Custom</a></li>
+          <li><a href="SISBio.html">About</a></li>
+          <li><a href="SISWhy"> why?</a></li>
+          <li><a href="SISLogin">login</a></li>
+        </menu>
+      </nav>
         </header>
         <h1>WHY?</h1>
         <p>
             One word <em>Scale</em>, people aren't very good at it. Sure mountains are big but how many duptrucks would it 
-            take to move. How many quarks fit in a grain of sand. How many wombats fit in a standard broom closet.
-            These are important questions, especially to authors and certain species of journalists. It it my dream that thi somehow prompts 
-            an xkcd comic or two somehow. The math for these things can be finicky.s
+            take to move one. How many quarks fit in a grain of sand. How many wombats fit in a standard broom closet.
+            These are important questions, especially to authors and certain species of journalists. It it my dream that this somehow prompts 
+            an xkcd comic or two somehow. The math for these things can be finicky hopefully these are some useful tools
         </p>
         <footer>
-
+            <a href="https://github.com/Stuart-Y/startup">GitHub</a>
         </footer>
     </body> 
 </html>
