--- a/SISWarning.html
+++ b/SISWarning.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <!-- Page data-->
@@ -5,9 +6,15 @@
     <body>
         <header>
           <!-- Logo Home Button -->
-          <!-- why link -->
-          <!-- about link -->
-          <!-- custom link -->
+          <nav>
+            <menu>
+              <li><a href="SiSHome.html">Home</a></li>
+              <li><a href="SiSCustom.html">Custom</a></li>
+              <li><a href="SISBio.html">About</a></li>
+              <li><a href="SISWhy"> why?</a></li>
+              <li><a href="SISLogin">login</a></li>
+            </menu>
+          </nav>
         </header>
         <div id="WarningTitle" class="title">
         <h1>I Wish I Didn't Need This Page</h1>
@@ -20,7 +27,7 @@
             </p>
         </div>    
         <footer>
-
+            <a href="https://github.com/Stuart-Y/startup">GitHub</a>
         </footer>
     </body> 
 </html>
