--- a/SiSUser.html
+++ b/SiSUser.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <!-- Page data-->
@@ -5,9 +6,18 @@
     <body>
         <header>
           <!-- Logo Home Button -->
-          <!-- why link -->
-          <!-- about link -->
-          <!-- custom link -->
+          <div id="HomeTitle" class="title">
+            <h1> Stuff in Stuff<sup>&reg;</sup></h1>
+          </div>
+          <nav>
+            <menu>
+              <li><a href="SiSHome.html">Home</a></li>
+              <li><a href="SiSCustom.html">Custom</a></li>
+              <li><a href="SISBio.html">About</a></li>
+              <li><a href="SISWhy"> why?</a></li>
+              <li><a href="SISLogin">login</a></li>
+            </menu>
+          </nav>
         </header>
         <div id="UserTitle" class="title">
             <h1>Username</h1>
@@ -40,7 +50,7 @@
             <!--Random Dad Joke-->
         </div>
         <footer>
-
+            <a href="https://github.com/Stuart-Y/startup">GitHub</a>
         </footer>
     </body> 
 </html>
