fixing link header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="SiSCustom.html">Custom</a></li>
           <li><a href="SISBio.html">About</a></li>
-          <li><a href="SISWhy"> why?</a></li>
+          <li><a href="SISWhy.html"> why?</a></li>
           <li><a href="SISLogin">login</a></li>
         </menu>
       </nav>
