--- a/SiSUser.html
+++ b/SiSUser.html
@@ -11,8 +11,8 @@
           </div>
           <nav>
             <menu>
-              <li><a href="SiSHome.html">Home</a></li>
-              <li><a href="SiSCustom.html">Custom</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="SISCustom.html">Custom</a></li>
               <li><a href="SISBio.html">About</a></li>
               <li><a href="SISWhy.html"> why?</a></li>
               <li><a href="SISLogin">login</a></li>
