--- a/SISWarning.html
+++ b/SISWarning.html
@@ -8,8 +8,8 @@
           <!-- Logo Home Button -->
           <nav>
             <menu>
-              <li><a href="SiSHome.html">Home</a></li>
-              <li><a href="SiSCustom.html">Custom</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="SISCustom.html">Custom</a></li>
               <li><a href="SISBio.html">About</a></li>
               <li><a href="SISWhy.html"> why?</a></li>
               <li><a href="SISLogin">login</a></li>
