--- a/SiSCustom.html
+++ b/SiSCustom.html
@@ -4,7 +4,7 @@
     <!-- Page data-->
     <nav>
       <menu>
-        <li><a href="SiSHome.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="SiSCustom.html">Custom</a></li>
         <li><a href="SISBio.html">About</a></li>
         <li><a href="SISWhy.html"> why?</a></li>
