--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <menu>
           <li><a href="index.html">Home</a></li>
-          <li><a href="SiSCustom.html">Custom</a></li>
+          <li><a href="SISCustom.html">Custom</a></li>
           <li><a href="SISBio.html">About</a></li>
           <li><a href="SISWhy.html"> why?</a></li>
           <li><a href="SISLogin">login</a></li>
