--- a/SiSCustom.html
+++ b/SiSCustom.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang = "en">
+  <header>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stuff in Stuff</title>
+  </header>
   <head>
     <!-- Page data-->
     <nav>
@@ -14,7 +18,9 @@
   </head>
   <body>
     <header>
-
+      <div id="HomeTitle" class="title">
+        <h1> Stuff in Stuff<sup>&reg;</sup></h1>
+      </div>
     </header>
     <div id="CustomTitle" class="title">
         <h1>Custom</h1>
