--- a/SiSWhy.html
+++ b/SiSWhy.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <!-- Page data-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Stuff in Stuff</title>
     </head>
     <body>
         <header>
