pre-grading cleanup

--- a/SISBio.html
+++ b/SISBio.html
@@ -17,7 +17,8 @@
           <li><a href="SISBio.html">About</a></li>
           <li><a href="SISWhy.html"> why?</a></li>
           <li><a href="SISLogin">login</a></li>
-        </menu>
+          <!-- TODO Delete ASAP-->
+          <li><a href="SISUser.html">MockUser</a></li>
       </nav>
         </header>
             <div id="aboutTitle" class="title">
