--- a/SISLogin.html
+++ b/SISLogin.html
@@ -13,7 +13,7 @@
               <li><a href="SISCustom.html">Custom</a></li>
               <li><a href="SISBio.html">About</a></li>
               <li><a href="SISWhy.html"> why?</a></li>
-              <li><a href="SISLogin">login</a></li>
+              <li><a href="SISLogin.html">login</a></li>
               <!-- TODO Delete ASAP-->
               <li><a href="SISUser.html">MockUser</a></li>
           </nav>
@@ -21,12 +21,10 @@
         <div id="WarningTitle" class="title">
         <h1>I Wish I Didn't Need This Page</h1>
         </div>
-        <div id="warningText" class="infotext">
-            <p>
-                I am aware of some corners of the internet and can imagine some less savory imagery 
-                generated that this websites premise might render. I choose not to host this on my site. Sorry for the 
-                inconvenience but certain items and combinations of items I have chosen to prohibit. 
-            </p>
+        <div id="basicLogin">
+            <!--TODO replace with embedded dropdown-->
+            <input type="text" placeholder="username"/>
+            <input type="text" placeholder="password"/>
         </div>    
         <footer>
             <a href="https://github.com/Stuart-Y/startup">GitHub</a>
