--- a/SiSCustom.html
+++ b/SiSCustom.html
@@ -9,11 +9,12 @@
     <nav>
       <menu>
         <li><a href="index.html">Home</a></li>
-        <li><a href="SiSCustom.html">Custom</a></li>
+        <li><a href="SISCustom.html">Custom</a></li>
         <li><a href="SISBio.html">About</a></li>
         <li><a href="SISWhy.html"> why?</a></li>
         <li><a href="SISLogin">login</a></li>
-      </menu>
+        <!-- TODO Delete ASAP-->
+        <li><a href="SISUser.html">MockUser</a></li>
     </nav>
   </head>
   <body>
