--- a/SiSUser.html
+++ b/SiSUser.html
@@ -17,6 +17,8 @@
               <li><a href="SISBio.html">About</a></li>
               <li><a href="SISWhy.html"> why?</a></li>
               <li><a href="SISLogin">login</a></li>
+              <!-- TODO Delete ASAP-->
+              <li><a href="SISUser.html">MockUser</a></li>
             </menu>
           </nav>
         </header>
@@ -31,9 +33,10 @@
         </div>
         <div id="LatestFills" class="activityBox">
             <div id="LatestTitle" class="title">
-                <h3>Latest Stuff in Stuff</h3>    
+                <h3>Latest Stuff in Stuff</h3>
+                <p>Realtime Communication</p>    
             </div>
-            <!--Dynamic List of Recent Fill Queries-->
+            <!--Dynamic List of Recent Fill Queries Websocket REALTIME QUERIES-->
         </div>
         <div id="UserCustomItems" class="activityBox">
             <div id="UserCustomTitle" class="title">
