--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <div id ="StuffPicker" class="activityBox">
       <div id="FillPicker">
         <h2> How many </h2>
-        <img alt="Question Mark", src="https://github.com/Stuart-Y/startup/blob/main/QuestionMark.png" >
+        <img alt="Question Mark", src="QuestionMark.png" >
         <select class=itemPicker></select>
       </div>
       <div id="StuffedPicker">
         <h2>can fit in</h2>
-        <img alt="Question Mark", src="https://github.com/Stuart-Y/startup/blob/main/QuestionMark.png" >
+        <img alt="Question Mark", src="QuestionMark.png" >
         <select class="itemPicker"></select>
       </div>
     </div>
