update page header with mock login

--- a/SiSCustom.html
+++ b/SiSCustom.html
@@ -12,7 +12,7 @@
         <li><a href="SISCustom.html">Custom</a></li>
         <li><a href="SISBio.html">About</a></li>
         <li><a href="SISWhy.html"> why?</a></li>
-        <li><a href="SISLogin">login</a></li>
+        <li><a href="SISLogin.html">login</a></li>
         <!-- TODO Delete ASAP-->
         <li><a href="SISUser.html">MockUser</a></li>
     </nav>
