I should have used my html emulator

--- a/SISLogin.html
+++ b/SISLogin.html
@@ -18,8 +18,8 @@
               <li><a href="SISUser.html">MockUser</a></li>
           </nav>
         </header>
-        <div id="WarningTitle" class="title">
-        <h1>I Wish I Didn't Need This Page</h1>
+        <div id="logTitle" class="title">
+        <h1>Login</h1>
         </div>
         <div id="basicLogin">
             <!--TODO replace with embedded dropdown-->
