--- a/SiSUser.html
+++ b/SiSUser.html
@@ -35,7 +35,7 @@
             <div id="LatestTitle" class="title">
                 <h3>Latest Stuff in Stuff</h3>
                 <p>Realtime Communication</p>
-                <p><em>10^8 koalas fit in the empire sata building (UserBob)</em></p>    
+                <p><em>10^8 koalas fit in the empire state building (UserBob)</em></p>    
             </div>
             <!--Dynamic List of Recent Fill Queries Websocket REALTIME QUERIES-->
         </div>
