--- a/SISWarning.html
+++ b/SISWarning.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang = "en">
-    <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Stuff in Stuff</title>
-    </head>
-    <body>
-        <header>
-          <!-- Logo Home Button -->
-          <nav>
-            <menu>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="SISCustom.html">Custom</a></li>
-              <li><a href="SISBio.html">About</a></li>
-              <li><a href="SISWhy.html"> why?</a></li>
-              <li><a href="SISLogin.html">login</a></li>
-              <!-- TODO Delete ASAP-->
-              <li><a href="SISUser.html">MockUser</a></li>
-          </nav>
-        </header>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stuff in Stuff</title>
+    <link rel="stylesheet" href="main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+    crossorigin="anonymous"
+  />
+  </head>
+  <body class="bg-dark text-light">
+    <header class="container-fluid">
+      <!-- Logo Home Button -->
+
+      <nav class="navbar fixed-top navbar-dark">
+        <a class="navbar-brand" href="#">Stuff in Stuff<sup>&reg;</sup></a>
+        <menu>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="SISCustom.html">Custom</a></li>
+          <li class="nav-item"><a class="nav-link" href="SISBio.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="SISWhy.html"> why?</a></li>
+          <li class="nav-item"><a class="nav-link" href="SISLogin.html">login</a></li>
+        </menu>
+      </nav>
+    </header>
+    <main class="container-fluid bg-secondary text-center">
         <div id="WarningTitle" class="title">
         <h1>I Wish I Didn't Need This Page</h1>
         </div>
@@ -27,8 +37,9 @@
                 generated that this websites premise might render. I choose not to host this on my site. Sorry for the 
                 inconvenience but certain items and combinations of items I have chosen to prohibit. 
             </p>
-        </div>    
-        <footer>
+        </div>
+        </main>    
+        <footer class="bg-dark text-white-50">
             <a href="https://github.com/Stuart-Y/startup">GitHub</a>
         </footer>
     </body> 
