--- a/SiSWhy.html
+++ b/SiSWhy.html
@@ -2,8 +2,11 @@
 <html lang = "en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
     <title>Stuff in Stuff</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="why.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -28,16 +31,18 @@
       </nav>
     </header>
     <main class="container-fluid bg-secondary text-center">
-        <h1>WHY?</h1>
-        <p>
-            One word <em>Scale</em>, people aren't very good at it. Sure mountains are big but how many duptrucks would it 
-            take to move one. How many quarks fit in a grain of sand. How many wombats fit in a standard broom closet.
+      <div class="why">
+        <h1>WHY ?</h1>
+         <p>
+            One word, <em>Scale</em>, people aren't very good at it. Sure mountains are big but how many dumptrucks would it 
+            take to move one? How many quarks fit in a grain of sand? How many wombats fit in a standard broom closet?
             These are important questions, especially to authors and certain species of journalists. It it my dream that this somehow prompts 
             an xkcd comic or two somehow. The math for these things can be finicky hopefully these are some useful tools
         </p>
-      </main>
-        <footer class="bg-dark text-white-50">
-            <a href="https://github.com/Stuart-Y/startup">GitHub</a>
-        </footer>
-    </body> 
+      </div>
+    </main>
+    <footer class="bg-dark text-white-50">
+      <a href="https://github.com/Stuart-Y/startup">GitHub</a>
+    </footer>
+  </body> 
 </html>
