styling for About page

--- a/SISBio.html
+++ b/SISBio.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Stuff in Stuff</title>
         <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="bio.css" />
         <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
         <link
@@ -29,10 +30,10 @@
           </nav>
         </header>
         <main class="container-fluid bg-secondary text-center">
-            <div id="aboutTitle" class="title">
+            <div id="aboutMain" class="content">
                 <h1>About</h1>
-            </div>
-            <p>At some point I may put useful information in here. For now this seems enough</p>
+             <p>At some point I may put useful information in here. For now this seems enough</p>
+            <link rel="stylesheet" href="main.css" />
         </main>
         <footer class="bg-dark text-white-50">
             <a href="https://github.com/Stuart-Y/startup">GitHub</a>
