mock login page styled

--- a/SISLogin.html
+++ b/SISLogin.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stuff in Stuff</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="login.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -28,13 +29,11 @@
         </nav>
       </header>
         <main class="container-fluid bg-secondary text-center">
-        <div id="logTitle" class="title">
-        <h1>Login</h1>
-        </div>
-        <div id="basicLogin">
-            <!--TODO replace with embedded dropdown-->
-            <input type="text" placeholder="username"/>
-            <input type="text" placeholder="password"/>
+        <div id="logMain" class="content">
+          <h1>Login</h1>
+          <!--TODO replace with embedded dropdown-->
+          <input type="text" placeholder="username"/>
+          <input type="text" placeholder="password"/>
         </div>
         </main>    
         <footer class="bg-dark text-white-50">
