--- a/SISWarning.html
+++ b/SISWarning.html
@@ -28,10 +28,8 @@
       </nav>
     </header>
     <main class="container-fluid bg-secondary text-center">
-        <div id="WarningTitle" class="title">
-        <h1>I Wish I Didn't Need This Page</h1>
-        </div>
-        <div id="warningText" class="infotext">
+        <div id="WarningMain" class="content">
+          <h1>I Wish I Didn't Need This Page</h1>
             <p>
                 I am aware of some corners of the internet and can imagine some less savory imagery 
                 generated that this websites premise might render. I choose not to host this on my site. Sorry for the 
