update color scheme

--- a/SISBio.html
+++ b/SISBio.html
@@ -18,7 +18,7 @@
         <header class="container-fluid">
           <!-- Logo Home Button -->
     
-          <nav class="navbar fixed-top navbar-dark">
+          <nav class="navbar fixed-top">
             <a class="navbar-brand" href="#">Stuff in Stuff<sup>&reg;</sup></a>
             <menu>
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -29,13 +29,13 @@
             </menu>
           </nav>
         </header>
-        <main class="container-fluid bg-secondary text-center">
+        <main class="container-fluid text-center">
             <div id="aboutMain" class="content">
                 <h1>About</h1>
              <p>At some point I may put useful information in here. For now this seems enough</p>
             <link rel="stylesheet" href="main.css" />
         </main>
-        <footer class="bg-dark text-white-50">
+        <footer class="text-white-50">
             <a href="https://github.com/Stuart-Y/startup">GitHub</a>
         </footer>
     </body> 
