--- a/SISLogin.html
+++ b/SISLogin.html
@@ -28,7 +28,7 @@
           </menu>
         </nav>
       </header>
-        <main class="container-fluid bg-secondary text-center">
+        <main class="container-fluid text-center">
         <div id="logMain" class="content">
           <h1>Login</h1>
           <!--TODO replace with embedded dropdown-->
@@ -36,7 +36,7 @@
           <input type="text" placeholder="password"/>
         </div>
         </main>    
-        <footer class="bg-dark text-white-50">
+        <footer class="text-white-50">
             <a href="https://github.com/Stuart-Y/startup">GitHub</a>
         </footer>
     </body> 
