--- a/SISWarning.html
+++ b/SISWarning.html
@@ -27,7 +27,7 @@
         </menu>
       </nav>
     </header>
-    <main class="container-fluid bg-secondary text-center">
+    <main class="container-fluid text-center">
         <div id="WarningMain" class="content">
           <h1>I Wish I Didn't Need This Page</h1>
             <p>
@@ -37,7 +37,7 @@
             </p>
         </div>
         </main>    
-        <footer class="bg-dark text-white-50">
+        <footer class="text-white-50">
             <a href="https://github.com/Stuart-Y/startup">GitHub</a>
         </footer>
     </body> 
