--- a/SiSCustom.html
+++ b/SiSCustom.html
@@ -28,7 +28,7 @@
         </menu>
       </nav>
     </header>
-    <main class="container-fluid bg-secondary text-center">
+    <main class="container-fluid text-center">
       <div id="CustomMain" class="content">
         <h1>Custom</h1>
         <h3>Make Your Own Thing</h3>
@@ -48,7 +48,7 @@
         </div>  
       </div>
     </main>
-    <footer class="bg-dark text-white-50">
+    <footer class="text-white-50">
       <a href="https://github.com/Stuart-Y/startup">GitHub</a>
     </footer>
   </body>
