--- a/SiSWhy.html
+++ b/SiSWhy.html
@@ -30,7 +30,7 @@
         </menu>
       </nav>
     </header>
-    <main class="container-fluid bg-secondary text-center">
+    <main class="container-fluid text-center">
       <div class="why">
         <h1>WHY ?</h1>
          <p>
@@ -41,7 +41,7 @@
         </p>
       </div>
     </main>
-    <footer class="bg-dark text-white-50">
+    <footer class=" text-white-50">
       <a href="https://github.com/Stuart-Y/startup">GitHub</a>
     </footer>
   </body> 
