--- a/SiSWhy.html
+++ b/SiSWhy.html
@@ -20,7 +20,7 @@
       <!-- Logo Home Button -->
 
       <nav class="navbar fixed-top navbar-dark">
-        <a class="navbar-brand" href="#">Stuff in Stuff<sup>&reg;</sup></a>
+        <a class="navbar-brand" href="index.html">Stuff in Stuff<sup>&reg;</sup></a>
         <menu>
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="SISCustom.html">Custom</a></li>
