--- a/SISLogin.html
+++ b/SISLogin.html
@@ -14,11 +14,11 @@
   />
   </head>
     <body>
-      <header class="container-fluid">
+      <header class="container-fluid text-light">
         <!-- Logo Home Button -->
   
         <nav class="navbar fixed-top navbar-dark">
-          <a class="navbar-brand" href="#">Stuff in Stuff<sup>&reg;</sup></a>
+          <a class="navbar-brand" href="index.html">Stuff in Stuff<sup>&reg;</sup></a>
           <menu>
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="SISCustom.html">Custom</a></li>
@@ -28,7 +28,7 @@
           </menu>
         </nav>
       </header>
-        <main class="container-fluid text-center">
+        <main class="container-fluid text-center text-light">
         <div id="logMain" class="content">
           <h1>Login</h1>
           <!--TODO replace with embedded dropdown-->
