--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
       <!-- Logo Home Button -->
 
       <nav class="navbar fixed-top navbar-dark">
-        <a class="navbar-brand" href="#">Stuff in Stuff<sup>&reg;</sup></a>
+        <a class="navbar-brand" href="index.html">Stuff in Stuff<sup>&reg;</sup></a>
         <menu>
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="SISCustom.html">Custom</a></li>
           <li class="nav-item"><a class="nav-link" href="SISBio.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="SISWhy.html"> why?</a></li>
           <li class="nav-item"><a class="nav-link" href="SISLogin.html">login</a></li>
+          <li class="nav-item"><a class="nav-link" href="SISUser.html">MockUser</a></li>
         </menu>
       </nav>
     </header>
