grid layout established

--- a/SiSUser.html
+++ b/SiSUser.html
@@ -41,6 +41,14 @@
                     <div id="UserCustomItems" class="content">
                         <div id="UserCustomTitle" class="title">
                             <h3>Custom Items</h3>
+                            <table>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Density</th>
+                                    <th>Volume</th>
+                                    <th>Shape</th>
+                                </tr>
+                            </table>
                         </div>
                     <!--Dynamic List of User Generated Items-->
                     </div>                        
